fix(appointments): update align center image

--- a/cn-web/src/pages/AppointmentsPage.css
+++ b/cn-web/src/pages/AppointmentsPage.css
@@ -47,7 +47,7 @@
   display: flex;
   flex-direction: row;
   gap: 12px;
-  align-items: flex-start;
+  align-items: center;
   flex: 1;
 }
 
@@ -313,7 +313,7 @@
 	display: flex;
 	flex-direction: row;
 	gap: 12px;
-	align-items: flex-start;
+	align-items: center;
 	flex: 1;
 }
 
